--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"
+      - "80:80"
       - "3000:3000"
     links:
       - db
+    volumes:
+      - .:/var/www/html
   db:
     image: mysql:5.6
     environment:
